<resources>
    <string name="app_name" translatable="false">GoDeviceInfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_subtitle" translatable="false">.</string>
    <string name="nav_android">Device</string>
    <string name="nav_display" translatable="false">Display</string>
    <string name="nav_cpu" translatable="false">CPU</string>
    <string name="nav_gpu" translatable="false">GPU</string>
    <string name="nav_memory">Memory</string>
    <string name="nav_network">Network</string>
    <string name="nav_subtitle_comunicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="Manufacturer">Manufacturer</string>
    <string name="Model">Model</string>
    <string name="Product">Product</string>
    <string name="AndroidVersion">Android Version</string>
    <string name="APIversion">API Version</string>
    <string name="CodeName">Code Name</string>
    <string name="Board">Board</string>
    <string name="SOFTWARE" translatable="false">SOFTWARE</string>
    <string name="hardware" translatable="false">HARDWARE</string>
    <string name="Desconocido">Unknown</string>
    <string name="action_information">Information</string>
</resources>
