<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_android"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/nav_android" />
        <item
            android:id="@+id/nav_display"
            android:icon="@drawable/ic_tablet_black_24dp"
            android:title="@string/nav_display" />
        <item
            android:id="@+id/nav_cpu"
            android:icon="@drawable/ic_memory_black_24dp"
            android:title="@string/nav_cpu" />
        <item
            android:id="@+id/nav_gpu"
            android:icon="@drawable/ic_developer_board_black_24dp"
            android:title="@string/nav_gpu" />
        <item
            android:id="@+id/nav_memory"
            android:icon="@drawable/ic_sd_storage_black_24dp"
            android:title="@string/nav_memory" />
        <item
            android:id="@+id/nav_red"
            android:icon="@drawable/ic_network_cell_black_24dp"
            android:title="@string/nav_network" />
    </group>

    <item android:title="@string/nav_subtitle_comunicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

</menu>
